...
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/txtUsuarioNombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/hub_saludo"
                android:textColor="@color/white"
...
